--- a/octacore_frontend/src/styles.scss
+++ b/octacore_frontend/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* If you are only using SCSS, import the generated Tailwind CSS instead */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
